Updated .gitignore to include Python FastAPI

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ doc/api/
 
 .flutter-plugins
 .flutter-plugins-dependencies
+
+# Ignore Python Virtual Environment & Cache
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+db.sqlite3
